--- a/app/src/main/res/layout/layout_title_normal.xml
+++ b/app/src/main/res/layout/layout_title_normal.xml
@@ -36,7 +36,7 @@
         android:layout_height="44dp"
         android:gravity="center"
         android:layout_centerInParent="true"
-        android:text="确认借款"
+        android:text=""
         android:textColor="@color/color_title"
         android:textSize="17dip" />
 
