--- a/app/src/main/res/layout/activity_loan.xml
+++ b/app/src/main/res/layout/activity_loan.xml
@@ -156,7 +156,7 @@
 
                     <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="20dp"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginTop="15dp"
                         android:orientation="horizontal">
@@ -176,7 +176,7 @@
                             android:layout_height="20dp"
                             android:layout_gravity="center_horizontal"
                             android:layout_marginLeft="5dp"
-                            android:src="@drawable/loan_question"/>
+                            android:src="@drawable/question"/>
                     </LinearLayout>
                 </LinearLayout>
             </RelativeLayout>
